--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,17 @@ docutils==0.14
 future==0.16.0
 idna==2.6
 jmespath==0.9.3
+lockfile==0.12.2
+luigi==2.7.2
 numpy==1.14.0
 pandas==0.22.0
+python-daemon==2.1.2
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.12.1
 s3transfer==0.1.12
 six==1.11.0
 sodapy==1.4.5
+tornado==4.5.3
 urllib3==1.22
 yelpapi==2.2.2
