--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==1.6.1
 boto3==1.5.22
 botocore==1.8.36
 certifi==2018.1.18
@@ -5,11 +6,15 @@ chardet==3.0.4
 docutils==0.14
 future==0.16.0
 idna==2.6
+isort==4.3.4
 jmespath==0.9.3
+lazy-object-proxy==1.3.1
 lockfile==0.12.2
 luigi==2.7.2
+mccabe==0.6.1
 numpy==1.14.0
 pandas==0.22.0
+pylint==1.8.2
 python-daemon==2.1.2
 python-dateutil==2.6.1
 pytz==2017.3
@@ -19,4 +24,5 @@ six==1.11.0
 sodapy==1.4.5
 tornado==4.5.3
 urllib3==1.22
+wrapt==1.10.11
 yelpapi==2.2.2
